2014-03-03  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* demo/plugin/Makefile.am: New file.
	* demo/plugin/Makefile: Dropped.
	* configure.in: generate demo/plugin/Makefile in build directory.

2014-03-02  Jérôme Lodewyck  <lodewyck@users.sourceforge.net>

	* src/qtterminal/QtGnuplotWidget.* src/qtterminal/QtGnuplotWindow.*
	src/qtterminal/QtGnuplotSettings.ui: New settings option for displaying
	mouse coordinates. Possible choices are Status bar, Tool bar, Inline or
	None.

2014-03-01  Ethan A Merritt  <merritt@u.washington.edu>

	* demo/Makefile.am.in:  Fix a typo, but the plugin subdir is still
	not being properly created by "make distcheck".

2014-02-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c src/axis.c src/parse.c src/parse.h src/internal.c
	src/color.c src/boundary.c src/command.c src/contour.c src/datafile.c:
	Trivial removal of dead code and old comments. Flag unused parameters.
	
	* term/js/gnuplot_svg.js: Do not let hypertext box run off the bottom
	or right edge of the svg viewBox.
	Bug #1340

2014-02-28  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/config.mgw config/mingw/Makefile config/msvc/Makefile:
	Build support for plugins. Build demo plugin.

	* config/mingw/Makefile: New target 'maint' to recreate makefile.all.

	* src/makefile.all src/makefile.awc:  Recreate to include external.c.

2014-02-28  Alexander Täschner  <taschna@users.sourceforge.net>

	* src/fit.c demo/fit.dem:  Optionally take errors of independent
	variables into account.
	Patch #585

	* src/fit.dem:  fit always requires decent initial parameter values.
	Never initialize them to zero.

	* src/matric.c (free_matr):  Accept NULL pointers.

2014-02-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c src/command.h src/eval.c src/eval.h src/external.c
	src/external.h src/gp_types.h src/Makefile.am src/show.c src/tables.c:
	New command `import func(x) from "sharedobject"` extends gnuplot