@@ -1,5 +1,8 @@
 2014-03-03  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
+	* src/Makefile.am (DISTCLEANFILES): Clean off timestamp.h for
+	distcheck.
+
 	* demo/plugin/Makefile.am: New file.
 	* demo/plugin/Makefile: Dropped.
 	* configure.in: generate demo/plugin/Makefile in build directory.
